2007-06-10  Jean-Christophe Baillie  <baillie@gostai.com>

        Until now, freezing a time controlled command (like wait or a modified
	assignement) did not freeze the internal time of the command, which
	resulted in an abrupt reajustement when the command was unfrozen. This
	patch fixes the problem on wait and assignments, and the corresponding
	tests has been added.
	add a first attempt in "time freezing" capabilities. 
	* src/ucommand.cc: the WAIT and ASSIGN_VALUE commands now store the
        'lastExec' time and a flag when they have been frozen. Upon
	unfreezing, the internal time-oriented variables are adjusted based on
	the difference between the current time and lastExec..
	* src/ucommand.hh: add lastExec and the 'frozen' flag.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	Finish broken merge
	merge -r 1038:1078 failed to include the modifications for
	uconnection.cc.
	* src/uconnection.cc: Import the changes documented in 2007-06-04.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ueventhandler.cc: Sort commutable lines.
	Promote for over while.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	The attribute UVariableName::rooted is not removed (that was
	the effect of the "only" keyword) because it appears to be
	set and checked in other places.
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y: Remove
	the "only" keyword.
	This was validated by JCB.
	(refvariable): Remove, use variable instead.
	(refvariables): Rename as...
	(variables): this.

2007-06-04  Akim Demaille  <demaille@gostai.com>

	merge -r 1078:1138 https://svn.gostai.com/svn/kernel1/branches/1.0
	Note that, again, I had to apply some of the changes by hand,
	since some files were moved in include/kernel.
	Also, I had to fill properly Matthieu's ChangeLog entries.

	2007-05-31  Matthieu Nottale  <nottale@gostai.com>
	Fix a bug in timeout command
	* src/ucommand.cc: in UCommand_TIMEOUT::execute: setTag on